# overture-schema-pydantic

./: JSON-SCHEMA.md  Makefile  README.md  SCHEMA_VALIDATION_FEEDBACK_LOOP.md  pyproject.toml  test.sh
reference/counterexamples/divisions/division/: parent-not-allowed-on-country.yaml
reference/counterexamples/divisions/division_area/: missing-properties.yaml
reference/counterexamples/transportation/segment/road/destinations/: bad-road-destinations-bad-label-type.yaml
tests/: test_schema_validation.py
